--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet test src/PlatformPLC.slnx --no-build --configuration Release
 
       - name: Build Extension
-        working-directory: ./src/Extension
+        working-directory: ./src/Extension/platform-plc
         run: |
           npm install
           npm run compile
