--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "platformplc",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "PlatformPLC is a universal, open-source framework designed to bring PLC engineering into the modern software development era. It allows engineers to design hardware-agnostic logic within **VS Code**, leveraging professional software engineering tools such as Git and Language Servers.",
   "main": "index.js",
   "directories": {
@@ -21,8 +21,8 @@
     "url": "git+https://github.com/DaanGr/PlatformPLC.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "DaanGr",
+  "license": "MIT",
   "type": "module",
   "bugs": {
     "url": "https://github.com/DaanGr/PlatformPLC/issues"
