--- a/src/Extension/platform-plc/package.json
+++ b/src/Extension/platform-plc/package.json
@@ -2,7 +2,7 @@
   "name": "platform-plc",
   "displayName": "PlatformPLC",
   "description": "Modern PLC Engineering Tooling",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.109.0"
   },
@@ -12,10 +12,24 @@
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
-    "commands": [
+    "languages": [
       {
-        "command": "platform-plc.helloWorld",
-        "title": "Hello World"
+        "id": "scl",
+        "aliases": [
+          "SCL",
+          "Structured Control Language"
+        ],
+        "extensions": [
+          ".scl"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "scl",
+        "scopeName": "source.scl",
+        "path": "./syntaxes/scl.tmLanguage.json"
       }
     ]
   },
@@ -44,5 +58,8 @@
     "typescript": "^5.9.3",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2"
+  },
+  "dependencies": {
+    "vscode-languageclient": "^9.0.1"
   }
 }
