--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 name: Release
 on:
-  workflow_dispatch: # This is your "Manual Trigger" for the solo release
+  workflow_dispatch:
     inputs:
       level:
         description: "Release level (patch, minor, major)"
@@ -10,19 +10,30 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    # CRUCIAAL: Voeg dit toe om de 403 error op te lossen
+    permissions:
+      contents: write 
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          # Gebruik de standaard token voor authenticatie bij het pushen
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      # This step would use a tool like 'standard-version' to:
-      # 1. Update package.json
-      # 2. Update AssemblyInfo
-      # 3. Create a Git Tag
-      # 4. Generate CHANGELOG.md
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+
       - name: Bump Version and Tag
         run: |
+          # Als je wilt dat de commit op jouw naam staat, vervang dit door je eigen info:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          
+          # Voer de release uit
           npx standard-version --release-as ${{ github.event.inputs.level }}
+          
+          # Push de wijzigingen en de nieuwe tag
           git push --follow-tags origin main
