feat(extension): add snippets for scl

--- a/src/Extension/platform-plc/package.json
+++ b/src/Extension/platform-plc/package.json
@@ -31,6 +31,12 @@
         "scopeName": "source.scl",
         "path": "./syntaxes/scl.tmLanguage.json"
       }
+    ],
+    "snippets": [
+      {
+        "language": "scl",
+        "path": "./snippets/scl-snippets.json"
+      }
     ]
   },
   "scripts": {
